Replacement of im1 map import